# ollama_manager

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  update.sh
src/: main.rs
src/bot/: mod.rs
src/bot/messages/: any_messages.rs  mod.rs
src/bot/messages/commands/: mod.rs
src/bot/messages/commands/admin/: mod.rs
src/bot/messages/commands/user/: mod.rs  start.rs
src/db/: mod.rs
src/db/entity/: chats.rs  messages.rs  mod.rs  users.rs
src/models/: mod.rs
